<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_bg_login"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_lock_white_24dp" />

        <EditText
            android:id="@+id/edtPincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_pin"
            android:maxLines="1"
            android:maxLength="100" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_submit_button_gray"
            android:gravity="center"
            android:minWidth="@dimen/width_button"
            android:padding="10dp"
            android:text="@string/text_cancel"
            android:textColor="#fff"
            android:textSize="@dimen/textsize_2" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_submit_button_accent"
            android:gravity="center"
            android:minWidth="@dimen/width_button"
            android:padding="10dp"
            android:text="@string/text_done"
            android:textColor="#fff"
            android:textSize="@dimen/textsize_2" />


    </LinearLayout>
</LinearLayout>