<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_user_coordnate_panel"
            android:orientation="vertical"
            tools:context="com.app.brownipoints.MainActivity">

            <include layout="@layout/navigation_toolbar"></include>

            <View
                android:id="@+id/rlBackground"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_user_bg"
                android:layout_marginTop="?actionBarSize"
                android:background="@drawable/shape_user_bg"></View>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.brown.NoActionbar"
                app:layout_anchor="@id/rlBackground"
                app:layout_anchorGravity="center_horizontal|bottom">

                <ImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="7dp" />

            </android.support.v7.widget.CardView>
            <!--<com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivUserProfile"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                app:civ_border_color="#556080"
                app:civ_border_width="1dp"
                app:civ_shadow="false"
                app:civ_shadow_color="#b9434343"
                app:civ_shadow_radius="10"
                app:layout_anchor="@id/rlBackground"
                app:layout_anchorGravity="center_horizontal|bottom" />-->
        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/name"
                    android:textSize="@dimen/textsize_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorPrimary"></View>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tvPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Charles Koch"
                    android:textSize="@dimen/textsize_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/mobile"
                    android:textSize="@dimen/textsize_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorPrimary"></View>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="+91 818421813"
                    android:textSize="@dimen/textsize_2" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_svg_call" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/email"
                    android:textSize="@dimen/textsize_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorPrimary"></View>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="example@example.com"
                    android:textSize="@dimen/textsize_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/address"
                    android:textSize="@dimen/textsize_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorPrimary"></View>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:minHeight="30dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="-"
                    android:textSize="@dimen/textsize_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/about"
                    android:textSize="@dimen/textsize_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorPrimary"></View>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="-"
                    android:textSize="@dimen/textsize_2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>