<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.photobook.MainActivity">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/field_left_margin"
                android:layout_marginTop="20dp"
                android:text="@string/old_password"
                android:textSize="@dimen/textsize_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:layout_marginTop="3dp"
                android:background="@drawable/shape_frag_entry_field_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/edtOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="123456"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textColorHint="@color/field_background_" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/field_left_margin"
                android:layout_marginTop="40dp"
                android:text="@string/new_password"
                android:textSize="@dimen/textsize_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:layout_marginTop="3dp"
                android:background="@drawable/shape_frag_entry_field_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="123456"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textColorHint="@color/field_background_" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/field_left_margin"
                android:layout_marginTop="20dp"
                android:text="@string/password_confirm"
                android:textSize="@dimen/textsize_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:layout_marginTop="3dp"
                android:background="@drawable/shape_frag_entry_field_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/edtCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="123456"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textColorHint="@color/field_background_" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_submit_button_accent"
            android:minWidth="@dimen/width_button"
            android:text="Submit"
            android:textColor="#fff"
            android:textSize="@dimen/textsize_2" />

    </LinearLayout>
</LinearLayout>
